Add component charts for new import flow (#69)
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/charts/opscenter-config/values.yaml
+++ b/charts/opscenter-config/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 nameOverride: ""
-fullnameOverride: opscenter
+fullnameOverride: ""
 
 global:
   # License for the product.
