Update catalog-manager permissions; Add CRDs (#6)
Signed-off-by: Arnob kumar saha <arnob@appscode.com>

--- a/charts/catalog-manager/templates/cluster-role.yaml
+++ b/charts/catalog-manager/templates/cluster-role.yaml
@@ -6,10 +6,8 @@ metadata:
     {{- include "catalog-manager.labels" . | nindent 4 }}
 rules:
 - apiGroups:
-  - catalog-manager.appscode.com
-  resources:
-  - hostedapps
-  - hostedapps/status
+  - catalog.kubeware.dev
+  resources: ["*"]
   verbs: ["get", "list", "watch", "patch"]
 - apiGroups:
   - kubedb.com
