--- a/charts/docker-machine-operator/crds/docker-machine.klusters.dev_drivers.yaml
+++ b/charts/docker-machine-operator/crds/docker-machine.klusters.dev_drivers.yaml
@@ -1,8 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+  creationTimestamp: null
   name: drivers.docker-machine.klusters.dev
 spec:
   group: docker-machine.klusters.dev
@@ -33,10 +32,12 @@ spec:
           spec:
             description: DriverSpec defines the desired state of Driver
             properties:
-              foo:
-                description: Foo is an example field of Driver. Edit driver_types.go
-                  to remove/update
+              builtin:
+                type: boolean
+              downloadURL:
                 type: string
+            required:
+            - builtin
             type: object
           status:
             description: DriverStatus defines the observed state of Driver
