--- a/charts/docker-machine-operator/templates/deployment.yaml
+++ b/charts/docker-machine-operator/templates/deployment.yaml
@@ -31,10 +31,6 @@ spec:
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           args:
             - run
-            - --vault-server-name={{ .Values.vaultServer.name }}
-            - --vault-server-namespace={{ .Values.vaultServer.namespace }}
-            - --secret-reader-service-account-name={{ .Values.secretReaderServiceAccount.name }}
-            - --secret-reader-service-account-namespace={{ .Values.secretReaderServiceAccount.namespace }}
           ports:
             - name: metrics
               containerPort: 8080
@@ -42,6 +38,11 @@ spec:
             - name: http
               containerPort: 8081
               protocol: TCP
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmpdir
+            - mountPath: /.docker
+              name: dockerdir
           livenessProbe:
             httpGet:
               path: /healthz
@@ -52,6 +53,11 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.image.resources | nindent 12 }}
+      volumes:
+      - name: tmpdir
+        emptyDir: {}
+      - name: dockerdir
+        emptyDir: {}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
