--- a/charts/capi-catalog/doc.yaml
+++ b/charts/capi-catalog/doc.yaml
@@ -8,11 +8,11 @@ repository:
   url: https://charts.appscode.com/stable/
   name: appscode
 chart:
-  name: capi-ops-manager
+  name: capi-catalog
   values: -- generate from values file --
   valuesExample: -- generate from values file --
 prerequisites:
-- Kubernetes 1.21+
+  - Kubernetes 1.21+
 release:
-  name: capi-ops-manager
+  name: capi-catalog
   namespace: kubeops
