--- a/charts/capi-catalog/templates/k-1-29.yaml
+++ b/charts/capi-catalog/templates/k-1-29.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   capa:
     kind: "0.22"
+    kind_image: "v1.28.7"
     clusterctl: "v1.6.3"
     capi: "v1.6.3"
     infrastructure: "v2.4.2"
@@ -14,11 +15,13 @@ spec:
     iamAuthenticator: "0.6.14"
   capg:
     kind: "0.22"
+    kind_image: "v1.28.7"
     clusterctl: "v1.6.3"
     capi: "v1.6.3"
     infrastructure: "v2.4.2"
   capz:
     kind: "0.22"
+    kind_image: "v1.28.7"
     clusterctl: "v1.6.3"
     capi: "v1.6.3"
     infrastructure: "v2.4.2"
