--- a/charts/capi-ops-manager/crds/catalog.klusters.dev_capiversions.yaml
+++ b/charts/capi-ops-manager/crds/catalog.klusters.dev_capiversions.yaml
@@ -45,6 +45,8 @@ spec:
                     type: string
                   kind:
                     type: string
+                  kind_image:
+                    type: string
                 required:
                 - capi
                 - clusterawsadm
@@ -52,6 +54,7 @@ spec:
                 - iamAuthenticator
                 - infrastructure
                 - kind
+                - kind_image
                 type: object
               capg:
                 properties:
@@ -63,11 +66,14 @@ spec:
                     type: string
                   kind:
                     type: string
+                  kind_image:
+                    type: string
                 required:
                 - capi
                 - clusterctl
                 - infrastructure
                 - kind
+                - kind_image
                 type: object
               capz:
                 properties:
@@ -79,11 +85,14 @@ spec:
                     type: string
                   kind:
                     type: string
+                  kind_image:
+                    type: string
                 required:
                 - capi
                 - clusterctl
                 - infrastructure
                 - kind
+                - kind_image
                 type: object
             required:
             - capa
