--- a/charts/capi-catalog/templates/k-1-27.yaml
+++ b/charts/capi-catalog/templates/k-1-27.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "capi-catalog.labels" . | nindent 4 }}
 spec:
   capa:
-    kind: "0.22"
+    kind: "v0.22.0"
     kind_image: "v1.28.7"
     clusterctl: "v1.6.3"
     capi: "v1.6.3"
@@ -14,14 +14,14 @@ spec:
     clusterawsadm: "v2.4.2"
     iamAuthenticator: "0.6.14"
   capg:
-    kind: "0.22"
+    kind: "v0.22.0"
     kind_image: "v1.28.7"
     clusterctl: "v1.6.3"
     capi: "v1.6.3"
-    infrastructure: "v2.4.2"
+    infrastructure: "v1.6.0"
   capz:
-    kind: "0.22"
+    kind: "v0.22.0"
     kind_image: "v1.28.7"
     clusterctl: "v1.6.3"
     capi: "v1.6.3"
-    infrastructure: "v2.4.2"
+    infrastructure: "v1.14.2"
