--- a/charts/capi-ops-manager/templates/rbac/cluster_role_binding.yaml
+++ b/charts/capi-ops-manager/templates/rbac/cluster_role_binding.yaml
@@ -7,7 +7,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "capi-ops-manager.fullname" . }}
+  name: cluster-admin
 subjects:
 - kind: ServiceAccount
   name: {{ include "capi-ops-manager.serviceAccountName" . }}
