--- a/charts/capi-ops-manager/values.yaml
+++ b/charts/capi-ops-manager/values.yaml
@@ -104,9 +104,9 @@ apiserver:
   # for more information on proper values of this field
   versionPriority: 15
   # If true, mutating webhook is configured for Kubernetes workloads
-  enableMutatingWebhook: false
+  enableMutatingWebhook: true
   # If true, validating webhook is configured for Stash CRDss
-  enableValidatingWebhook: false
+  enableValidatingWebhook: true
   # CA certificate used by the Kubernetes api server. This field is automatically assigned by the operator.
   ca: not-ca-cert
   # If true, bypasses checks that validating webhook is actually enabled in the Kubernetes cluster.
@@ -127,8 +127,8 @@ apiserver:
     # Private key for the serving certificate used by webhook server.
     serverKey: ""
 monitoring:
-  # Name of monitoring agent (either "prometheus.io/operator" or "prometheus.io/builtin")
-  agent: "none"
+  # Name of monitoring agent (one of "prometheus.io", "prometheus.io/operator", "prometheus.io/builtin")
+  agent: ""
   serviceMonitor:
     # Specify the labels for ServiceMonitor.
     # Prometheus crd will select ServiceMonitor using these labels.
