Add docker machine fields
Signed-off-by: AbdullahAlShaad <abdullah.alshaad@appscode.com>

--- a/charts/capi-catalog/crds/catalog.klusters.dev_capiversions.yaml
+++ b/charts/capi-catalog/crds/catalog.klusters.dev_capiversions.yaml
@@ -39,13 +39,20 @@ spec:
                     type: string
                   clusterctl:
                     type: string
+                  dockerMachine:
+                    properties:
+                      os:
+                        type: string
+                      type:
+                        type: string
+                    type: object
                   iamAuthenticator:
                     type: string
                   infrastructure:
                     type: string
                   kind:
                     type: string
-                  kind_image:
+                  kindImage:
                     type: string
                 required:
                 - capi
@@ -54,7 +61,7 @@ spec:
                 - iamAuthenticator
                 - infrastructure
                 - kind
-                - kind_image
+                - kindImage
                 type: object
               capg:
                 properties:
@@ -62,18 +69,25 @@ spec:
                     type: string
                   clusterctl:
                     type: string
+                  dockerMachine:
+                    properties:
+                      os:
+                        type: string
+                      type:
+                        type: string
+                    type: object
                   infrastructure:
                     type: string
                   kind:
                     type: string
-                  kind_image:
+                  kindImage:
                     type: string
                 required:
                 - capi
                 - clusterctl
                 - infrastructure
                 - kind
-                - kind_image
+                - kindImage
                 type: object
               capz:
                 properties:
@@ -81,18 +95,25 @@ spec:
                     type: string
                   clusterctl:
                     type: string
+                  dockerMachine:
+                    properties:
+                      os:
+                        type: string
+                      type:
+                        type: string
+                    type: object
                   infrastructure:
                     type: string
                   kind:
                     type: string
-                  kind_image:
+                  kindImage:
                     type: string
                 required:
                 - capi
                 - clusterctl
                 - infrastructure
                 - kind
-                - kind_image
+                - kindImage
                 type: object
             required:
             - capa
