--- a/charts/docker-machine-operator/crds/docker-machine.klusters.dev_machines.yaml
+++ b/charts/docker-machine-operator/crds/docker-machine.klusters.dev_machines.yaml
@@ -1,6 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  creationTimestamp: null
   name: machines.docker-machine.klusters.dev
 spec:
   group: docker-machine.klusters.dev
