--- a/charts/docker-machine-operator/templates/user-roles.yaml
+++ b/charts/docker-machine-operator/templates/user-roles.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: appscode:capi-ops-manager:admin
+  name: appscode:docker-machine:admin
   labels:
     rbac.authorization.k8s.io/aggregate-to-admin: "true"
   annotations:
@@ -9,8 +9,7 @@ metadata:
     "helm.sh/hook-delete-policy": before-hook-creation
 rules:
 - apiGroups:
-  - catalog.klusters.dev
-  - ops.klusters.dev
+  - docker-machine.klusters.dev
   resources:
   - "*"
   verbs: ["*"]
@@ -18,7 +17,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: appscode:capi-ops-manager:edit
+  name: appscode:docker-machine:edit
   labels:
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
   annotations:
@@ -26,7 +25,7 @@ metadata:
     "helm.sh/hook-delete-policy": before-hook-creation
 rules:
 - apiGroups:
-  - ops.klusters.dev
+  - docker-machine.klusters.dev
   resources:
   - "*"
   verbs: ["create", "delete", "deletecollection", "patch", "update"]
@@ -34,7 +33,7 @@ rules:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: appscode:capi-ops-manager:view
+  name: appscode:docker-machine:view
   labels:
     rbac.authorization.k8s.io/aggregate-to-view: "true"
   annotations:
@@ -42,8 +41,7 @@ metadata:
     "helm.sh/hook-delete-policy": before-hook-creation
 rules:
 - apiGroups:
-  - catalog.klusters.dev
-  - ops.klusters.dev
+  - docker-machine.klusters.dev
   resources:
   - "*"
   verbs: ["get", "list", "watch"]
