--- a/charts/capi-catalog/templates/k-1-29.yaml
+++ b/charts/capi-catalog/templates/k-1-29.yaml
@@ -6,30 +6,11 @@ metadata:
     {{- include "capi-catalog.labels" . | nindent 4 }}
 spec:
   capa:
-    kind: "v0.22.0"
-    kindImage: "v1.28.7"
-    clusterctl: "v1.6.3"
-    capi: "v1.6.3"
-    infrastructure: "v2.4.2"
-    clusterawsadm: "v2.4.2"
-    iamAuthenticator: "0.6.14"
-    dockerMachine:
-      type: "t2.xlarge"
+    deployerImage: '{{ include "image.ghcr" (merge (dict "_repo" "appscode/capa-deployer") $) }}:v1.29'
+    ebsCSIDriverVersion: "v1.29.1-eksbuild.1"
   capg:
-    kind: "v0.22.0"
-    kindImage: "v1.28.7"
-    clusterctl: "v1.6.3"
-    capi: "v1.6.3"
-    infrastructure: "v1.6.0"
-    dockerMachine:
-      type: "n1-standard-2"
-      os: "ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240701"
+    deployerImage: '{{ include "image.ghcr" (merge (dict "_repo" "appscode/capg-deployer") $) }}:v1.29'
   capz:
-    kind: "v0.22.0"
-    kindImage: "v1.28.7"
-    clusterctl: "v1.6.3"
-    capi: "v1.6.3"
-    infrastructure: "v1.14.2"
-    dockerMachine:
-      type: "Standard_D2s_v3"
-      os: "Canonical:0001-com-ubuntu-server-jammy:22_04-lts:22.04.202406140"
+    deployerImage: '{{ include "image.ghcr" (merge (dict "_repo" "appscode/capz-deployer") $) }}:v1.29'
+  caph:
+    deployerImage: '{{ include "image.ghcr" (merge (dict "_repo" "appscode/caph-deployer") $) }}:v1.29'
