--- a/charts/capi-catalog/values.yaml
+++ b/charts/capi-catalog/values.yaml
@@ -4,3 +4,12 @@
 
 nameOverride: ""
 fullnameOverride: ""
+
+
+proxies:
+  dockerHub: ""
+  dockerLibrary: ""
+  ghcr: ghcr.io
+  kubernetes: registry.k8s.io
+  microsoft: mcr.microsoft.com
+  appscode: r.appscode.com
