--- a/charts/capi-ops-manager/crds/ops.klusters.dev_clusteropsrequests.yaml
+++ b/charts/capi-ops-manager/crds/ops.klusters.dev_clusteropsrequests.yaml
@@ -1,6 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  creationTimestamp: null
   name: clusteropsrequests.ops.klusters.dev
 spec:
   group: ops.klusters.dev
