Update Capi Version
Signed-off-by: AbdullahAlShaad <abdullah.alshaad@appscode.com>

--- a/charts/capi-catalog/crds/catalog.klusters.dev_capiversions.yaml
+++ b/charts/capi-catalog/crds/catalog.klusters.dev_capiversions.yaml
@@ -36,8 +36,11 @@ spec:
                 properties:
                   deployerImage:
                     type: string
+                  ebsCSIDriverVersion:
+                    type: string
                 required:
                 - deployerImage
+                - ebsCSIDriverVersion
                 type: object
               capg:
                 properties:
