Update Chart Version
Signed-off-by: AbdullahAlShaad <abdullah.alshaad@appscode.com>

--- a/charts/capi-catalog/Chart.yaml
+++ b/charts/capi-catalog/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v2
 description: CAPI catalog by AppsCode
 name: capi-catalog
-version: v2024.7.9
-appVersion: v0.0.1
-home: https://github.com/ops-center
+version: v2024.9.24
+appVersion: v0.0.3
+home: https://appscode.com
 icon: https://cdn.appscode.com/images/products/searchlight/searchlight-512x512.png
 sources:
-- https://github.com/ops-center
+- https://github.com/kluster-api
 maintainers:
 - name: appscode
   email: support@appscode.com
