--- a/charts/capi-catalog/templates/k-1-27.yaml
+++ b/charts/capi-catalog/templates/k-1-27.yaml
@@ -30,3 +30,9 @@ spec:
     gatewayAPIVersion: "v1.0.0"
     capiVersion: "v1.7.4"
     infrastructureVersion: "v1.0.0"
+  capk:
+    deployerImage: '{{ include "image.ghcr" (merge (dict "_repo" "appscode/capk-deployer") $) }}:v1.27'
+    certManagerVersion: "v1.15.3"
+    gatewayAPIVersion: "v1.0.0"
+    capiVersion: "v1.7.4"
+    infrastructureVersion: "v0.1.9"
