Add namespace list permission
Signed-off-by: rasel <rasel@appscode.com>

--- a/charts/aws-credential-manager/templates/rbac.yaml
+++ b/charts/aws-credential-manager/templates/rbac.yaml
@@ -56,6 +56,14 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - namespaces
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - serviceaccounts
   verbs:
   - create
