Add configmap watch and list permission (#35)
Signed-off-by: rasel <rasel@appscode.com>
Signed-off-by: Tamal Saha <tamal@appscode.com>
Co-authored-by: Tamal Saha <tamal@appscode.com>

--- a/charts/aws-credential-manager/templates/rbac.yaml
+++ b/charts/aws-credential-manager/templates/rbac.yaml
@@ -48,6 +48,22 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - namespaces
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - serviceaccounts
   verbs:
   - create
