--- a/charts/aws-credential-manager/templates/service.yaml
+++ b/charts/aws-credential-manager/templates/service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "aws-credential-manager.fullname" . }}
+  name: {{ include "aws-credential-manager.webhookServiceName" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "aws-credential-manager.labels" . | nindent 4 }}
 spec:
   ports:
-  - name: https
-    port: 8443
+  - port: 443
     protocol: TCP
-    targetPort: 8443
+    targetPort: 9443
   selector:
     {{- include "aws-credential-manager.labels" . | nindent 4 }}
